# skladnik

./: .git-blame-ignore-revs  .kde-ci.yml  CMakeLists.txt  README  snapcraft.yaml
doc/: CMakeLists.txt  index.docbook  man-skladnik.6.docbook
po/ar/: skladnik.po
po/ast/: skladnik.po
po/bg/: skladnik.po
po/bs/: skladnik.po
po/ca/: skladnik.po
po/ca/docs/skladnik/: index.docbook  man-skladnik.6.docbook
po/ca@valencia/: skladnik.po
po/cs/: skladnik.po
po/de/: skladnik.po
po/en_GB/: skladnik.po
po/eo/: skladnik.po
po/es/: skladnik.po
po/es/docs/skladnik/: index.docbook  man-skladnik.6.docbook
po/et/: skladnik.po
po/eu/: skladnik.po
po/fi/: skladnik.po
po/fr/: skladnik.po
po/ga/: skladnik.po
po/gl/: skladnik.po
po/he/: skladnik.po
po/hi/: skladnik.po
po/hu/: skladnik.po
po/ia/: skladnik.po
po/it/: skladnik.po
po/it/docs/skladnik/: index.docbook  man-skladnik.6.docbook
po/ja/: skladnik.po
po/ka/: skladnik.po
po/ko/: skladnik.po
po/lt/: skladnik.po
po/mr/: skladnik.po
po/nb/: skladnik.po
po/nl/: skladnik.po
po/nl/docs/skladnik/: index.docbook  man-skladnik.6.docbook
po/nn/: skladnik.po
po/pl/: skladnik.po
po/pt/: skladnik.po
po/pt_BR/: skladnik.po
po/pt_BR/docs/skladnik/: index.docbook  man-skladnik.6.docbook
po/ru/: skladnik.po
po/sa/: skladnik.po
po/sk/: skladnik.po
po/sl/: skladnik.po
po/sl/docs/skladnik/: index.docbook  man-skladnik.6.docbook
po/sv/: skladnik.po
po/tr/: skladnik.po
po/ug/: skladnik.po
po/uk/: skladnik.po
po/uk/docs/skladnik/: index.docbook  man-skladnik.6.docbook
po/zh_CN/: skladnik.po
po/zh_TW/: skladnik.po
src/: CMakeLists.txt  InternalCollections.h  LevelCollection.h  MainWindow.cpp  PlayField.cpp  PlayField.h  StoneIndex.h  main.cpp  org.kde.skladnik.desktop  org.kde.skladnik.metainfo.xml  skladnik.qrc  skladnikui.rc
themes/: CMakeLists.txt  skladnik_classic.desktop  skladnik_classic.svg.license
